Add --enable-native-access=ALL-UNNAMED to generated zilla launcher for JDK 25
https://claude.ai/code/session_01TtqsqngTyooKccwki6rLzo